--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,12 +1,37 @@
-<?xml version='1.0' encoding='UTF-8' ?>
+<?xml version='1.0' encoding='UTF-8' ?> 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
+
     <h:head>
-        <title>Facelet Title</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <title>References From School</title>
+        <link href="/resources/css/css.css" rel="stylesheet" type="text/css" />
+        <link rel="SHORTCUT ICON" href="http://cdn8.staztic.com/app/a/6090/6090049/travelmate-9-l-280x280.png"/>
     </h:head>
-    <h:body>
-        Hello from Facelets
+
+    <h:body >
+        <h:form id="telaLogin">
+            <br></br> <br></br>  
+            <p:growl id="mensagem" showDetail="true" sticky="true" />
+            <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
+
+            <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
+                <img src="/resources/img/ajax-loader.gif" />
+            </p:dialog>
+            <div id="centro">
+                <br></br>
+                <img src="/resources/img/logo.png" width="40%" style="text-align: center;"/>
+                <br></br>
+                <p:outputLabel value="Username" style="margin-left: 5%;" /><br></br>
+                <p:inputText value="#" style="margin-left: 5%;width: 70%;" />
+                <br></br><br></br>
+                <p:outputLabel value="Password" style="margin-left: 5%;" /><br></br>
+                <p:inputText value="#" type="password" style="margin-left: 5%;width: 70%;" />
+                <br></br><br></br>
+                <p:commandLink value="Login" class="botaoLogin" style="margin-left: 80%"/>
+            </div>
+        </h:form>
     </h:body>
 </html>
-
