--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>References From School</title>
-        <link href="/resources/css/css.css" rel="stylesheet" type="text/css" />
+        <link href="resources/css/css.css" rel="stylesheet" type="text/css" />
         <link rel="SHORTCUT ICON" href="http://cdn8.staztic.com/app/a/6090/6090049/travelmate-9-l-280x280.png"/>
     </h:head>
 
