correção botão next

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -61,7 +61,7 @@
                 </div>
                 <br></br>
                 <div align="right" style="width:83.5%;margin-left:7%;">
-                    <p:commandButton action="#{inicalMB.proximoTela()}" value="Next" icon="ui-icon-arrowthickstop-1-e" update="mensagem"/>
+                    <p:commandButton action="#{inicalMB.proximoTela()}" class="botaoLogin" value="Next" icon="ui-icon-arrowthickstop-1-e" update="mensagem"/>
                 </div>
                  <br></br>    
             </div>
