--- a/src/main/webapp/formulario.xhtml
+++ b/src/main/webapp/formulario.xhtml
@@ -8,7 +8,7 @@
     <h:head> 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>References From School</title>
-        <link href="../resources/css/css.css" rel="stylesheet" type="text/css" />
+        <link href="resources/css/css.css" rel="stylesheet" type="text/css" />
         <link rel="SHORTCUT ICON" href="http://cdn8.staztic.com/app/a/6090/6090049/travelmate-9-l-280x280.png"/>
     </h:head>
 
@@ -19,12 +19,12 @@
             <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
 
             <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
-                <img src="../resources/img/ajax-loader.gif" />
+                <img src="resources/img/ajax-loader.gif" />
             </p:dialog>
             <br></br>
-            <img src="../resources/img/logo.png" style=" margin-left:8%;"/>
-            <br></br>   <br></br><br></br>
-            <p:wizard class="painelFormulario">
+            <img src="resources/img/logo.png" style=" margin-left:8%;"/>
+            <br></br>   <br></br>
+            <p:wizard class="painelFormulario"> 
                <p:tab id="etapa1">
                     <br></br> 
                     <p:outputLabel for="site" value="Agent’s Site"/><br></br>
