--- a/src/main/webapp/formulario.xhtml
+++ b/src/main/webapp/formulario.xhtml
@@ -35,7 +35,7 @@
                     <br></br>  <br></br>
                     <p:outputLabel for="idade" value="Minimun Age for Regular Courses and Maximun Age for Regular Courses?"/><br></br>
                     <p:selectOneMenu id="idade" value="#{formularioMB.guiaEscola.idade}" style="width:150px;">
-                        <f:selectItem itemLabel="Select" itemValue="sn"  noSelectionOption="true"/>
+                        <f:selectItem itemLabel="Select" itemValue="0"  noSelectionOption="true"/>
                         <f:selectItem itemLabel="10" itemValue="10"/>
                         <f:selectItem itemLabel="11" itemValue="11"/> 
                         <f:selectItem itemLabel="12" itemValue="12"/>
