--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -30,6 +30,23 @@
                 <br></br>   
                 <div align="center" style="width:78%;margin-left:9%;">
                     <h:panelGrid columns="1" >
+                        <p:outputLabel for="nome" value="Your Name"/>
+                        <p:inputText id="nome" value="#{inicalMB.nome}" maxlength="100" style="width:100%;"/>
+                        <br/>
+                        <p:outputLabel value="School's Name" for="idescola"/> 
+                        <p:selectOneMenu id="idescola" style="width:240px;"
+                                         value="#{inicalMB.fornecedor}"
+                                         converter="FornecedorConverter" filter="true"
+                                         filterMatchMode="contains" panelStyle="width:180px">
+                            <f:selectItem itemLabel="Selecione" itemValue="0"
+                                          noSelectionOption="true" />
+                            <f:selectItems id="idFornecedor"
+                                           value="#{inicalMB.listaFornecedor}" var="fornecedorSelecionado"
+                                           itemLabel="#{fornecedorSelecionado.nome}" itemValue="#{fornecedorSelecionado}" />
+                            <f:attribute name="listaFornecedor" value="#{inicalMB.listaFornecedor}" />
+                            <p:ajax event="change" listener="#{inicalMB.gerarListaPais()}" update="idpais"/>
+                        </p:selectOneMenu> 
+                         <br/>
                         <p:outputLabel value="Countries" for="idpais"/>
                         <p:selectCheckboxMenu id="idpais" value="#{inicalMB.listaPaisSelecionados}" label="pais"
                                               converter="PaisConverter"   style="width:267px;"   filter="true" filterMatchMode="startsWith" panelStyle="width:250px">
@@ -44,20 +61,7 @@
                             <f:selectItems value="#{inicalMB.listaCidade}" var="cidade" itemLabel="#{cidade.nome}" itemValue="#{cidade}"/>
                             <f:attribute name="listaCidade" value="#{inicalMB.listaCidade}" />
                         </p:selectCheckboxMenu>
-                        <br/>
-                        <p:outputLabel value="School's Name" for="idescola"/>
-                        <p:selectOneMenu id="idescola" style="width:240px;"
-                                         value="#{inicalMB.fornecedor}"
-                                         converter="FornecedorConverter" filter="true"
-                                         filterMatchMode="contains" panelStyle="width:180px">
-                            <f:selectItem itemLabel="Selecione" itemValue="0"
-                                          noSelectionOption="true" />
-                            <f:selectItems id="idFornecedor"
-                                           value="#{inicalMB.listaFornecedor}" var="fornecedorSelecionado"
-                                           itemLabel="#{fornecedorSelecionado.nome}" itemValue="#{fornecedorSelecionado}" />
-                            <f:attribute name="listaFornecedor" value="#{inicalMB.listaFornecedor}" />
-                            <p:ajax event="change" listener="#{inicalMB.gerarListaPais()}" update="idpais"/>
-                        </p:selectOneMenu> 
+                       
                     </h:panelGrid>
                 </div>
                 <br></br>
